package com.example.hksalarycalculatorbackend.model;

public enum AdminActionType {
    DELETED,
    CREATED,

    UPDATED
}
