package com.example.hksalarycalculatorbackend.model;

public enum Status {
    ACTIVE,
    NOT_ACTIVE
}
